<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/postidTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:background="@color/cardview_light_background"/>

    <TextView
        android:id="@+id/postNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:text="@string/name"
        android:textColor="#BCAAA4" />
    <TextView
        android:id="@+id/postEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:background="@color/cardview_light_background"/>
    <TextView
        android:id="@+id/postuserIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:text="@string/user_id"
        android:textColor="#BCAAA4" />
    <TextView
        android:id="@+id/BodyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:background="@color/cardview_light_background"/>



</LinearLayout>