<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout="@layout/todorow_items">

    <TextView
        android:id="@+id/todoUserIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:text="@string/user_id"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/todoidTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:background="@color/cardview_light_background"/>

    <TextView
        android:id="@+id/todoTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:textSize="20sp"
        android:text="@string/title"
        android:textColor="#BCAAA4"
        />

    <CheckBox
        android:id="@+id/todocheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/checkbox" />


</LinearLayout>