<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/album_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/albumuserIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/albumidTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/albumTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp" />


</LinearLayout>