<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.aralb.internproject.MainActivity"
    tools:layout="@layout/photorow_items">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/photoTitle"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/secondary_text_dark"
                android:text="@string/title"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/photoAlbumId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albumid"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/photoid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personid"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>